<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id_til_list_presta_cat"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:hint="@string/Categories"
                app:boxBackgroundMode="outline"
                app:endIconMode="dropdown_menu"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_list"
                tools:layout_editor_absoluteX="12dp">

                <AutoCompleteTextView
                    android:id="@+id/id_actv_list_presta_cat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id_til_list_presta"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:hint="@string/Prestation"
                app:boxBackgroundMode="outline"
                app:endIconMode="clear_text"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/id_til_list_presta_cat"
                app:startIconDrawable="@drawable/ic_presta"
                tools:layout_editor_absoluteX="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_et_list_presta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id_til_list_presta_price"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:hint="@string/Price"
                app:boxBackgroundMode="outline"
                app:endIconMode="clear_text"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/id_til_list_presta"
                app:startIconDrawable="@drawable/ic_euro"
                app:suffixText=" €"
                tools:layout_editor_absoluteX="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_et_list_presta_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right|center_vertical"
                    android:inputType="number"
                    android:numeric="decimal" />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>